# ims-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.docker.md  README.md  TODO.md  compose.yml  entrypoint.sh  index.html  loaddata.py  manage.py  pyproject.toml  version.py
.github/workflows/: ci.yaml  ci.yml
config/: asgi.py  celery.py  health.py  jazzmin_settings.py  logging_config.py  platform_urls.py  robots.py  schema.py  settings.py  tenant_urls.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  local.py  logging_config.py  main.py  production.py  test.py
control_plane/: apps.py  auth.py  forms.py  middleware.py  models.py  openapi.py  permissions.py  serializers.py  throttling.py  urls.py  views.py
control_plane/migrations/: 0001_initial.py
docs/: api-design.md  naming-conventions.md  tenant_management.md
release/: README.md  system_releases.json
requirements/: base.txt  dev.txt  local.txt  prod.txt  production.txt
src/base/: admin.py  models.py  serializers.py
src/blog/: admin.py  apps.py  constants.py  filters.py  messages.py  models.py  permissions.py  schemas.py  serializers.py  urls.py  validators.py  views.py
src/core/: admin.py  constants.py  messages.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/customer/: admin.py  apps.py  constants.py  messages.py  models.py  urls.py  (+3 more)
templates/: base.html  home.html  tenant_home.html
tenants/: models.py  serializers.py  urls.py  validators.py  views.py
tests/: conftest.py  test_auth_boundaries.py  test_crawl_protection.py  test_observability.py
(+177 files in other folders)
