[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "operon-backend-service"
version = "0.1.0"
description = "Operon Backend Service"
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["alembic/versions/*", "**/migrations/**", "venv/*", "media/*"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "C4",
    "SIM",
    "RUF",
]
ignore = ["B904", "E501", "B008"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]

warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true

    # Relaxed temporarily to unblock CI: many third-party libs lack stubs
    disallow_untyped_defs = false
    check_untyped_defs = false
    ignore_missing_imports = true
    follow_imports = "silent"

    # Keep some useful warnings enabled
    strict_optional = true

[mypy.plugins.django-stubs]
django_settings_module = "config.settings"

[tool.django-stubs]
django_settings_module = "config.settings.main"
strict_settings = true
strict_model_abstract_attrs = true

[tool.coverage.run]
source = ["app"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
